--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <script type="module" src="auth.js"></script>
+  <script>src="auth.js"</script>
   <script>window.authInit && window.authInit('login')</script>
 </body>
 </html>
