--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <script type="module" src="auth.js"></script>
+  <script>src="auth.js"</script>
   <script>window.authInit && window.authInit('signup')</script>
 </body>
 </html>
