--- a/image-generator.html
+++ b/image-generator.html
@@ -114,13 +114,14 @@
 
     // 🔥 Mets ton config Firebase ici
     const firebaseConfig = {
-      apiKey: "VOTRE_API_KEY",
-      authDomain: "VOTRE_APP.firebaseapp.com",
-      projectId: "VOTRE_PROJECT_ID",
-      storageBucket: "VOTRE_BUCKET",
-      messagingSenderId: "ID",
-      appId: "ID"
-    };
+  apiKey: "AIzaSyAQYsPnbxkXwpWyA6HPZvIvx3tuq4Nfejg",
+  authDomain: "buildai-f12be.firebaseapp.com",
+  projectId: "buildai-f12be",
+  storageBucket: "buildai-f12be.firebasestorage.app",
+  messagingSenderId: "1029156287214",
+  appId: "1:1029156287214:web:46a2f65d03924ea74179ff",
+  measurementId: "G-WN1JXJBH60"
+};
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
