--- a/image-generator.html
+++ b/image-generator.html
@@ -93,7 +93,22 @@
   </style>
 </head>
 <body>
+<div id="topbar">
+  <span id="credits">Crédits : ...</span>
+</div>
 
+<style>
+  #topbar {
+    width: 100%;
+    background: #001a2c;
+    padding: 12px;
+    text-align: center;
+    font-size: 20px;
+    color: #0ff;
+    border-bottom: 1px solid #0ff;
+    box-shadow: 0 0 10px #0ff;
+  }
+</style>
   <h1>🖼️ BuildAI - Générateur d'Images</h1>
 
   <div class="container">
