--- a/image-generator.html
+++ b/image-generator.html
@@ -128,6 +128,6 @@
   <button id="downloadBtn" class="hidden">Télécharger</button>
 </div>
   
-<script><src="image-generator.js"></script>
+<script src="image-generator.js"></script>
 </body>
 </html>
