--- a/dashboard.html
+++ b/dashboard.html
@@ -12,6 +12,7 @@
 <body>
 
   <div class="sidebar">
+    <button id="toggleMenu" class="toggle-menu">☰</button>
     <h2 class="logo">Build<span>AI</span></h2>
 
     <ul class="menu">
