--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
 
     <ul>
         <li id="cardImageGenerator">🖼️ Générateur d’images</li>
-        <li>🔤 Outils texte</li>
+        <li id="cardTextTools">🔤 Outils texte</li>
         <li>🎨 Logo Maker</li>
         <li>👤 Profil</li>
         <li id="logoutBtn">🚪 Déconnexion</li>
@@ -36,7 +36,7 @@
             <p>Créer des images HD, logos et illustrations avec BUILD-AI.</p>
         </div>
 
-        <div class="card">
+        <div class="card" id="openTextTools">
             <h3>🔤 Outils texte</h3>
             <p>Traduction, résumé, correction, rédaction…</p>
         </div>
